# ML-CaPsule

./: .gitignore  .gitmodules  92% model.pkl  Activation Functions.md  Analysis_of_Temperature_Rise_in_PMSM.ipynb  AutoML_GSSoC.ipynb  Beautiful Soup.ipynb  Breast-Cancer-Predictor.ipynb  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_GUIDELINES.md  CS:GO Round Winner Classification  Copy_of_Fake_News_Detection.ipynb  Copy_of_FineTuned_LLama_Medical_Terms.ipynb  Customer Churn Classification Model  Drug_Discovery_Model  Fake_News_Detection.ipynb  Food_Calorie_Estimator.py  HypothesisTesting.ipynb  Instagram Reach Algorithm.ipynb  LICENSE  Learn.md  ML_EdgeDetection  Machine Hack -1.ipynb  NYC_Taxi_Trip_Duration.ipynb  Naive Bayes Documentation.ipynb  README.md  README.md updated file  READMEfile.md  Role_from_Resume.ipynb  Test Task_NIket.ipynb  Testemotion.ipynb  Testemotion.py  Training.ipynb  Trainingmodel.ipynb  Tweets Classifier.ipynb  UBER_DATA_ANALYSIS.ipynb  Updated Readme.md  Various_Plots_in_Matplotlib.ipynb  (+15 more)
.github/: pullrequest_template.md  readme_template.md
PyPI Package/: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
PyPI Package/.github/workflows/: ci.yaml  python-publish.yaml
PyPI Package/src/dbgenie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyPI Package/src/dbgenie2/mongodb/: mongocrud.py
PyPI Package/src/dbgenie2/mysql/: mysqlcrud.py
PyPI Package/src/dbgenie2/postgresql/: postgrescrud.py
PyPI Package/tests/integration/: test_int.py
(+1849 files in other folders)
